issue with navbar on mobile reverting back chagnes

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -8,7 +8,7 @@
 #about-background {
     background-color: rgba(53, 53, 53, .5);
     background-image: var(--bs-gradient);
-    padding: 75px 50px 100px 0;
+    /* padding: 75px 50px 100px 0; */
 }
 
 #about-image {
